[package]
name = "neural_network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graph = { git = "https://github.com/Banyc/graph.git", tag = "v0.0.14" }
rand = "0.8"
rand_distr = "0.4"
strict-num = "0.2"
thiserror = "1"

[dev-dependencies]
bincode = "1"
ron = "0.8"

[profile.profiling]
inherits = "release"
debug = true

[profile.test]
inherits = "release"
